--- a/BlazeSharkWV/BlazeSharkWV.csproj
+++ b/BlazeSharkWV/BlazeSharkWV.csproj
@@ -53,7 +53,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>blaze.ico</ApplicationIcon>
+    <ApplicationIcon>blazeshark.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="blaze.ico" />
+    <Content Include="blazeshark.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
